I updated the comment controller and the comment service

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.edu.miu.eaproject</groupId>
-	<artifactId>comment-service</artifactId>
+	<artifactId>comments-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>comment-service</name>
+	<name>comments-service</name>
 	<description>Blogging Application user micro-service</description>
 	<properties>
 		<java.version>11</java.version>
