--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8083
-spring.datasource.url=jdbc:mysql://localhost:3306/cs544?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/commentdb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=Asteway17*
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create-drop
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
