--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+spring.application.name=comment-service
 server.port=8083
+
 spring.datasource.url=jdbc:mysql://localhost:3306/commentdb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
